fixed bug which was causing side scroll on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 }
 
 body {
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
